# amis-agent

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_opt_in.py  0003_add_company_website_url.py  0004_add_qualification_contacts_outbox.py  0005_add_memory_tables.py  0006_add_outbox_llm_fields.py  0007_outbox_approval_fields.py
config/: discovery_seed.json  email_signature.txt
deploy/nginx/: amis-agent.conf
deploy/systemd/: amis-agent-api.service  amis-agent-scheduler.service  amis-agent-worker.service
docs/: agents.md  deployment.md  implementation.md  implementation_log.md  local_dev.md  manual_email_test.md  plan.md  prd.md  skills.md  spec.md
scripts/: approve_outbox.py  ec2_deploy_ui.sh  render_email.py  send_real_email.py
src/amis_agent/: main.py
src/amis_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/amis_agent/api/: deps.py
tests/: test_api_admin.py  test_directory_scraper.py  test_discovery.py  test_discovery_mapping.py  test_drafts.py  test_email.py  test_enrichment.py  test_gmail_sender.py  test_jobs.py  test_lead_pipeline.py  test_limits.py  test_llm_email_writer.py  test_metrics.py  test_models.py  test_outreach_processor.py  test_preflight.py  test_qualification.py  test_rate_limiter.py  test_reply_memory.py  test_scheduler.py  test_scheduler_loop.py  test_scrape_allowlist.py  test_send_real_email.py  test_sources.py  test_templates.py
ui/: index.html  package.json  tailwind.config.ts
ui/src/: App.tsx  api.ts  index.css
(+62 files in other folders)
